Updated theme with BrightByte branding

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Base Theme
-Theme URI: https://wordpress.org/
+Theme Name: BrightByte
+Theme URI: http://brightbyte.be/
 Author: Matthias Claessen
-Author URI: https://wordpress.org/
+Author URI: https://matthiasclaessen.be/
 Description: Base Theme for WordPress
 
 Version: 1.0
