--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: BrightByte
 Theme URI: http://brightbyte.be/
 Author: Matthias Claessen
 Author URI: https://matthiasclaessen.be/
-Description: Base Theme for WordPress
+Description: BrightByte Theme for WordPress
 
 Version: 1.0
 License: GNU General Public License v2 or later
